module8/81-k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
  namespace: oefeningen
spec:
  replicas: 2
  selector:
    matchLabels:
      component: webapp
  template:
    metadata:
      labels:
        component: webapp
    spec:
      containers:
        - image: vdatrainer/node-app
          name: nodejs
          ports:
            - containerPort: 5000
              protocol: TCP
