module8/81-k8s/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    component: redis
  name: redis
  namespace: oefeningen
spec:
  ports:
    - name: "redis"
      port: 6379
      targetPort: 6379
  selector:
    component: redis
