module8/81-k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demoapp
  namespace: oefeningen
spec:
  ingressClassName: nginx
  rules:
  - host: demoapp.frank.training.vandenabeele.x-plose.dev
    http:
      paths:
      - backend:
          service:
            name: webapp
            port:
              number: 5000
        path: /
        pathType: Prefix
